--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ jdk:
 install: mvn install -DskipTests=true -Dgpg.skip=true
 after_script: mvn cobertura:cobertura coveralls:cobertura
 
+archive: true
